--- a/src/platform/ios/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/src/platform/ios/en.lproj/MainStoryboard_iPhone.storyboard
@@ -15,6 +15,13 @@
                             <view hidden="YES" alpha="0.59999999999999964" contentMode="scaleToFill" id="Poz-0I-J9b">
                                 <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" id="8Pz-Yu-nSB" customClass="GADBannerView">
+                                        <rect key="frame" x="124" y="0.0" width="320" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -25,6 +32,9 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="568" height="320"/>
+                    <connections>
+                        <outlet property="bannerView" destination="8Pz-Yu-nSB" id="llw-hL-nbk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
@@ -95,6 +105,13 @@
                             <view hidden="YES" alpha="0.60000002384185791" contentMode="scaleToFill" id="oQH-pw-Rcf">
                                 <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" id="OYP-Uv-Hfp" customClass="GADBannerView">
+                                        <rect key="frame" x="124" y="0.0" width="320" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -103,6 +120,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="w6m-GS-mn5"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="bannerView" destination="OYP-Uv-Hfp" id="lHp-T4-e5N"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u3X-pK-j0A" sceneMemberID="firstResponder"/>
             </objects>
