--- a/src/platform/android/res/layout/activity_game.xml
+++ b/src/platform/android/res/layout/activity_game.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true" >
@@ -11,11 +12,13 @@
         android:orientation="vertical" >
     </LinearLayout>
 
-    <fragment
-        android:id="@+id/adFragment"
-        android:name="com.technegames.battlebombs.BaseGameActivity$AdFragment"
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </RelativeLayout>
