--- a/src/platform/android/res/layout/activity_game.xml
+++ b/src/platform/android/res/layout/activity_game.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:keepScreenOn="true" >
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:id="@+id/game"
@@ -11,14 +10,5 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
     </LinearLayout>
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </RelativeLayout>
